--- a/springMvc/pom.xml
+++ b/springMvc/pom.xml
@@ -31,6 +31,7 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>${spring.version}</version>
+		<!-- </dependency> -->
         </dependency>
  
         <dependency>
